# blis-rs

./: Cargo.toml  README.md
benches/: blis.rs  lib.rs
src/: lib.rs
