[package]
name = "blis"
version = "0.5.0"
edition = "2021"
authors = ["sarah <>"]
description = "Rust bindings for BLIS"
readme = "README.md"
repository = "https://github.com/kitegi/blis-rs/"
license = "MIT"
keywords = ["linear-algebra"]

[dependencies]
blis-sys = "0.3"
reborrow = "0.2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "blis"
harness = false
